--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,11 +1,7 @@
 body {
     background-color: #eee;
-    padding-top: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    text-shadow: 0 0 2px white, -1px -1px 2px white, 1px 0 2px white, 1px 1px 2px white;
-    background: url('https://img.clipartxtras.com/7d26b55eca97b6eb022caf04e716dd04_how-to-draw-200-zoo-animals-the-funniest-animal-2017-zoo-animals-clipart-with-names_1600-1131.jpeg') no-repeat;
-    background-size: cover;
+    padding-top: 10px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container {
@@ -16,34 +12,61 @@ body {
     border: 3px solid black;
 }
 
-h1,
+.hangmanTitle {
+    font-family: 'Gugi', cursive;
+    font-size: 7em;
+    margin-bottom: 0;
+    width: 100%;
+}
+
+.start-alert-text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 36px;
+    /* vertical-align: center; */
+    margin: 10px;
+    /* width: 50%; */
+}
+
+.card-text {
+    font-size: 30px;
+}
+
+/* h1,
 h2,
 h4 {
     margin: 10px;
     padding: 10px;
     background-color: rgba(255, 94, 0, 0.952);
-}
+} */
 
-h3,
+
+
+/* h3,
 h5,
 h6 {
     display: block;
     font-size: 1.17em;
     margin: 10px;
     padding: 10px;
-    background-color: rgba(128, 128, 128, 0.918);
-}
+} */
+
 
 #currentWord {
     letter-spacing: 10px;
     border: black;
+    font-size: 35px;
 }
 
-#pressKeyTryAgain {
+/* #pressKeyTryAgain {
     background-color: rgba(89, 0, 255, 0.747);
     border: black;
+} */
+
+#totalWins, #currentWord, #remainingGuesses, #guessedLetters {
+    line-height: 20px;
+    min-height: 20px;
 }
 
-/* #totalWins, #currentWord, #remainingGuesses, #guessedLetters {
-    line-height: 20px;
-} */
+#guessedLetters {
+    min-height: 20px;
+}
